--- a/public/styles/Reactive.css
+++ b/public/styles/Reactive.css
@@ -65,16 +65,22 @@
 /* Smartphones */
 
   .Catagories {
-    grid-template-columns: repeat(2,1fr);
-    grid-gap: 15px 20px;
+    /* grid-template-columns: repeat(2,1fr); */
+    grid-gap: 20px 12px;
+    grid-template-columns: repeat(3, minmax(0, 1fr));
   }
 
   .cover {
-    height: 14rem;
+    height: 9rem;
   }
+
+  /* .image {
+    object-fit: cover;
+  } */
 
   .title {
     font-size: 0.9rem;
+    margin: 0.3125em 0.265625rem;
   }
 
   /* Desc */
