Changes to the API call query, BannerImage and Title href

--- a/views/Catagory.ejs
+++ b/views/Catagory.ejs
@@ -72,8 +72,8 @@
                         </div>
                         </div>
                     </a>
-                    <a href="/<%= Respone.Page.media[i].type %>/<%= Respone.Page.media[i].id %>/<%= Respone.Page.media[i].id %>/<%= encodeURI(Respone.Page.media[i].title[Lang]) %>" class="title">
-                        <%= Respone.Page.media[i].title[Lang] %>
+                    <a href="/<%= Respone.Page.media[i].type %>/<%= Respone.Page.media[i].id %>/<%= encodeURI(Respone.Page.media[i].title[Lang])%>" class="title">
+                        <%= Respone.Page.media[i].title[Lang]  %>
                     </a>
                 </div>
             <% } %>
